# SixDForceToolkit

./: .gitignore  1.py  CMakeLists.txt  README.md  SixDForceTool.hpp  main.cpp
